--- a/taxi_v3/taxi_v3-q-learning.ipynb
+++ b/taxi_v3/taxi_v3-q-learning.ipynb
@@ -1,45 +1,36 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "https://www.learndatasci.com/tutorials/reinforcement-q-learning-scratch-python-openai-gym/"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import gym\n",
-    "env = gym.make('Taxi-v3').env"
+    "env = gym.make('Taxi-v3')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+---------+\n",
-      "|\u001b[34;1mR\u001b[0m: | :\u001b[43m \u001b[0m:\u001b[35mG\u001b[0m|\n",
-      "| : | : : |\n",
-      "| : : : : |\n",
-      "| | : | : |\n",
-      "|Y| : |B: |\n",
-      "+---------+\n",
-      "\n",
-      "\n"
+     "ename": "AttributeError",
+     "evalue": "'TaxiEnv' object has no attribute 's'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m/home/ajay/code/aisv802_drl_course/taxi_v3/taxi_v3-q-learning.ipynb Cell 2'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell://wsl%2Bubuntu/home/ajay/code/aisv802_drl_course/taxi_v3/taxi_v3-q-learning.ipynb#ch0000002vscode-remote?line=0'>1</a>\u001b[0m env\u001b[39m.\u001b[39;49mrender()\n",
+      "File \u001b[0;32m~/.local/lib/python3.8/site-packages/gym/core.py:286\u001b[0m, in \u001b[0;36mWrapper.render\u001b[0;34m(self, mode, **kwargs)\u001b[0m\n\u001b[1;32m    <a href='file:///home/ajay/.local/lib/python3.8/site-packages/gym/core.py?line=284'>285</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mrender\u001b[39m(\u001b[39mself\u001b[39m, mode\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mhuman\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs):\n\u001b[0;32m--> <a href='file:///home/ajay/.local/lib/python3.8/site-packages/gym/core.py?line=285'>286</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49menv\u001b[39m.\u001b[39;49mrender(mode, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
+      "File \u001b[0;32m~/.local/lib/python3.8/site-packages/gym/envs/toy_text/taxi.py:222\u001b[0m, in \u001b[0;36mTaxiEnv.render\u001b[0;34m(self, mode)\u001b[0m\n\u001b[1;32m    <a href='file:///home/ajay/.local/lib/python3.8/site-packages/gym/envs/toy_text/taxi.py?line=219'>220</a>\u001b[0m out \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdesc\u001b[39m.\u001b[39mcopy()\u001b[39m.\u001b[39mtolist()\n\u001b[1;32m    <a href='file:///home/ajay/.local/lib/python3.8/site-packages/gym/envs/toy_text/taxi.py?line=220'>221</a>\u001b[0m out \u001b[39m=\u001b[39m [[c\u001b[39m.\u001b[39mdecode(\u001b[39m\"\u001b[39m\u001b[39mutf-8\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39mfor\u001b[39;00m c \u001b[39min\u001b[39;00m line] \u001b[39mfor\u001b[39;00m line \u001b[39min\u001b[39;00m out]\n\u001b[0;32m--> <a href='file:///home/ajay/.local/lib/python3.8/site-packages/gym/envs/toy_text/taxi.py?line=221'>222</a>\u001b[0m taxi_row, taxi_col, pass_idx, dest_idx \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdecode(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49ms)\n\u001b[1;32m    <a href='file:///home/ajay/.local/lib/python3.8/site-packages/gym/envs/toy_text/taxi.py?line=223'>224</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mul\u001b[39m(x):\n\u001b[1;32m    <a href='file:///home/ajay/.local/lib/python3.8/site-packages/gym/envs/toy_text/taxi.py?line=224'>225</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39m\"\u001b[39m\u001b[39m_\u001b[39m\u001b[39m\"\u001b[39m \u001b[39mif\u001b[39;00m x \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m \u001b[39m\u001b[39m\"\u001b[39m \u001b[39melse\u001b[39;00m x\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'TaxiEnv' object has no attribute 's'"
      ]
     }
    ],
    "source": [
-    "print(env.render(mode='ansi'))"
+    "env.render()"
    ]
   },
   {
@@ -507,7 +498,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
