--- a/taxi_v3/taxi_v3-dqn-python.ipynb
+++ b/taxi_v3/taxi_v3-dqn-python.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,24 +24,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "42"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import gym\n",
-    "env = gym.make('Taxi-v3').env"
+    "env = gym.make('Taxi-v3')\n",
+    "env.reset()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<TaxiEnv<Taxi-v3>>\n"
+      "<TimeLimit<OrderEnforcing<TaxiEnv<Taxi-v3>>>>\n"
      ]
     }
    ],
@@ -51,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -59,11 +71,11 @@
      "output_type": "stream",
      "text": [
       "+---------+\n",
-      "|\u001b[34;1mR\u001b[0m: | : :\u001b[35mG\u001b[0m|\n",
+      "|\u001b[34;1mR\u001b[0m: |\u001b[43m \u001b[0m: :G|\n",
       "| : | : : |\n",
-      "| : :\u001b[43m \u001b[0m: : |\n",
+      "| : : : : |\n",
       "| | : | : |\n",
-      "|Y| : |B: |\n",
+      "|\u001b[35mY\u001b[0m| : |B: |\n",
       "+---------+\n",
       "\n"
      ]
@@ -75,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -83,11 +95,11 @@
      "output_type": "stream",
      "text": [
       "+---------+\n",
-      "|\u001b[34;1mR\u001b[0m: | : :\u001b[35mG\u001b[0m|\n",
+      "|\u001b[34;1mR\u001b[0m: |\u001b[43m \u001b[0m: :G|\n",
       "| : | : : |\n",
-      "| : :\u001b[43m \u001b[0m: : |\n",
+      "| : : : : |\n",
       "| | : | : |\n",
-      "|Y| : |B: |\n",
+      "|\u001b[35mY\u001b[0m| : |B: |\n",
       "+---------+\n",
       "\n"
      ]
@@ -99,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +125,7 @@
        " 5: [(1.0, 5, -10, False)]}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -150,12 +162,12 @@
     "import tensorflow as tf\n",
     "\n",
     "class DQNAgent:\n",
-    "    def __init__(self, gym_env):\n",
+    "    def __init__(self, gym_env, learning_rate):\n",
     "        self._gym_env = gym_env\n",
     "        self._num_states = gym_env.observation_space.n\n",
     "        self._num_actions = gym_env.action_space.n\n",
     "        \n",
-    "        self.replay_buffer = deque(maxlen=2000)\n",
+    "        self.replay_buffer = deque(maxlen=5000)\n",
     "        \n",
     "        self.gamma = 0.6\n",
     "        self.epsilon = 0.1\n",
@@ -163,9 +175,9 @@
     "        # build two networks\n",
     "        # deep q-network\n",
     "        #self.dqn = self._build_mirrored_model()\n",
-    "        self.dqn = self._build_compiled_model()\n",
+    "        self.dqn = self._build_compiled_model(learning_rate)\n",
     "        # deep target q-network\n",
-    "        self.tdqn = self._build_compiled_model()\n",
+    "        self.tdqn = self._build_compiled_model(learning_rate))\n",
     "        \n",
     "    def sync_target_network(self):\n",
     "        self.tdqn.set_weights(self.dqn.get_weights())\n",
@@ -179,23 +191,24 @@
     "        model.add(tf.keras.layers.Reshape((10,)))\n",
     "        model.add(tf.keras.layers.Dense(50, activation='relu'))\n",
     "        model.add(tf.keras.layers.Dense(50, activation='relu'))\n",
+    "        model.add(tf.keras.layers.Dense(50, activation='relu'))\n",
     "        model.add(tf.keras.layers.Dense(self._num_actions, activation='linear'))\n",
     "        return model\n",
     "    \n",
-    "    def _compile_model(self, model):\n",
-    "        model.compile(loss='mse', optimizer='adam')\n",
+    "    def _compile_model(self, model, learning_rate):\n",
+    "        model.compile(loss='mae', optimizer=tf.keras.optimizers.Adam(learning_rate=learning_rate))\n",
     "        \n",
     "    \n",
-    "    def _build_compiled_model(self):\n",
+    "    def _build_compiled_model(self, learning_rate):\n",
     "        model = self._build_model()\n",
-    "        self._compile_model(model)\n",
+    "        self._compile_model(model, learning_rate)\n",
     "        return model\n",
     "        \n",
-    "    def _build_mirrored_model(self):\n",
+    "    def _build_mirrored_model(self, learning_rate):\n",
     "        mirrored_strategy = tf.distribute.MirroredStrategy()\n",
     "        with mirrored_strategy.scope():\n",
     "            model = self._build_model()\n",
-    "            self._compile_model(model)\n",
+    "            self._compile_model(model, learning_rate)\n",
     "        return model\n",
     "            \n",
     "    \n",
@@ -869,7 +882,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
