--- a/taxi_v3/taxi_v3-q-learning.ipynb
+++ b/taxi_v3/taxi_v3-q-learning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,70 +12,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'TaxiEnv' object has no attribute 's'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m/home/ajay/code/aisv802_drl_course/taxi_v3/taxi_v3-q-learning.ipynb Cell 2'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell://wsl%2Bubuntu/home/ajay/code/aisv802_drl_course/taxi_v3/taxi_v3-q-learning.ipynb#ch0000002vscode-remote?line=0'>1</a>\u001b[0m env\u001b[39m.\u001b[39;49mrender()\n",
-      "File \u001b[0;32m~/.local/lib/python3.8/site-packages/gym/core.py:286\u001b[0m, in \u001b[0;36mWrapper.render\u001b[0;34m(self, mode, **kwargs)\u001b[0m\n\u001b[1;32m    <a href='file:///home/ajay/.local/lib/python3.8/site-packages/gym/core.py?line=284'>285</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mrender\u001b[39m(\u001b[39mself\u001b[39m, mode\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mhuman\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs):\n\u001b[0;32m--> <a href='file:///home/ajay/.local/lib/python3.8/site-packages/gym/core.py?line=285'>286</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49menv\u001b[39m.\u001b[39;49mrender(mode, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
-      "File \u001b[0;32m~/.local/lib/python3.8/site-packages/gym/envs/toy_text/taxi.py:222\u001b[0m, in \u001b[0;36mTaxiEnv.render\u001b[0;34m(self, mode)\u001b[0m\n\u001b[1;32m    <a href='file:///home/ajay/.local/lib/python3.8/site-packages/gym/envs/toy_text/taxi.py?line=219'>220</a>\u001b[0m out \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdesc\u001b[39m.\u001b[39mcopy()\u001b[39m.\u001b[39mtolist()\n\u001b[1;32m    <a href='file:///home/ajay/.local/lib/python3.8/site-packages/gym/envs/toy_text/taxi.py?line=220'>221</a>\u001b[0m out \u001b[39m=\u001b[39m [[c\u001b[39m.\u001b[39mdecode(\u001b[39m\"\u001b[39m\u001b[39mutf-8\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39mfor\u001b[39;00m c \u001b[39min\u001b[39;00m line] \u001b[39mfor\u001b[39;00m line \u001b[39min\u001b[39;00m out]\n\u001b[0;32m--> <a href='file:///home/ajay/.local/lib/python3.8/site-packages/gym/envs/toy_text/taxi.py?line=221'>222</a>\u001b[0m taxi_row, taxi_col, pass_idx, dest_idx \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdecode(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49ms)\n\u001b[1;32m    <a href='file:///home/ajay/.local/lib/python3.8/site-packages/gym/envs/toy_text/taxi.py?line=223'>224</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mul\u001b[39m(x):\n\u001b[1;32m    <a href='file:///home/ajay/.local/lib/python3.8/site-packages/gym/envs/toy_text/taxi.py?line=224'>225</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39m\"\u001b[39m\u001b[39m_\u001b[39m\u001b[39m\"\u001b[39m \u001b[39mif\u001b[39;00m x \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m \u001b[39m\u001b[39m\"\u001b[39m \u001b[39melse\u001b[39;00m x\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'TaxiEnv' object has no attribute 's'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------+\n",
+      "|R: | : :\u001b[34;1mG\u001b[0m|\n",
+      "| : | : :\u001b[43m \u001b[0m|\n",
+      "| : : : : |\n",
+      "| | : | : |\n",
+      "|\u001b[35mY\u001b[0m| : |B: |\n",
+      "+---------+\n",
+      "\n"
      ]
     }
    ],
    "source": [
+    "env.reset()\n",
     "env.render()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Environment\n",
-    "\n",
-    "- The filled square represents the taxi, which is yellow without a passenger and green with a passenger.\n",
-    "- The pipe (\"|\") represents a wall which the taxi cannot cross.\n",
-    "- R, G, Y, B are the possible pickup and destination locations. The blue letter represents the current passenger pick-up location, and the purple letter is the current destination.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## States / observation space\n",
-    "You'll also notice there are four (4) locations that we can pick up and drop off a passenger: R, G, Y, B or [(0,0), (0,4), (4,0), (4,3)] in (row, col) coordinates. Our illustrated passenger is in location Y and they wish to go to location R.\n",
-    "\n",
-    "When we also account for one (1) additional passenger state of being inside the taxi, we can take all combinations of passenger locations and destination locations to come to a total number of states for our taxi environment; there's four (4) destinations and five (4 + 1) passenger locations.\n",
-    "\n",
-    "So, our taxi environment has 5×5×5×4=500 total possible states."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Action space\n",
-    "\n",
-    "The agent encounters one of the 500 states and it takes an action. The action in our case can be to move in a direction or decide to pickup/dropoff a passenger.\n",
-    "\n",
-    "In other words, we have six possible actions:\n",
-    "\n",
-    "0 = south\n",
-    "1 = north\n",
-    "2 = east\n",
-    "3 = west\n",
-    "4 = pickup\n",
-    "5 = dropoff\n",
-    "\n",
-    "This is the action space: the set of all the actions that our agent can take in a given state.\n",
-    "\n",
-    "You'll notice in the illustration above, that the taxi cannot perform certain actions in certain states due to walls. In environment's code, we will simply provide a -1 penalty for every wall hit and the taxi won't move anywhere. This will just rack up penalties causing the taxi to consider going around the wall."
    ]
   },
   {
@@ -107,11 +64,11 @@
      "output_type": "stream",
      "text": [
       "+---------+\n",
-      "|\u001b[34;1mR\u001b[0m: | :\u001b[43m \u001b[0m:\u001b[35mG\u001b[0m|\n",
-      "| : | : : |\n",
+      "|R: | : :\u001b[34;1mG\u001b[0m|\n",
+      "| : | : :\u001b[43m \u001b[0m|\n",
       "| : : : : |\n",
       "| | : | : |\n",
-      "|Y| : |B: |\n",
+      "|\u001b[35mY\u001b[0m| : |B: |\n",
       "+---------+\n",
       "\n"
      ]
@@ -124,6 +81,127 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(286, -1, False, {'prob': 1.0})"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "env.step(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------+\n",
+      "|R: | : :\u001b[34;1mG\u001b[0m|\n",
+      "| : | : : |\n",
+      "| : : : :\u001b[43m \u001b[0m|\n",
+      "| | : | : |\n",
+      "|\u001b[35mY\u001b[0m| : |B: |\n",
+      "+---------+\n",
+      "  (South)\n"
+     ]
+    }
+   ],
+   "source": [
+    "env.render()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "action = 0\n",
+    "state, reward, done, info = env.step(action)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "386\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(state)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------+\n",
+      "|R: | : :\u001b[34;1mG\u001b[0m|\n",
+      "| : | : : |\n",
+      "| : : : : |\n",
+      "| | : | :\u001b[43m \u001b[0m|\n",
+      "|\u001b[35mY\u001b[0m| : |B: |\n",
+      "+---------+\n",
+      "  (South)\n"
+     ]
+    }
+   ],
+   "source": [
+    "env.render()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------+\n",
+      "|R: | : :\u001b[34;1mG\u001b[0m|\n",
+      "| : | : : |\n",
+      "| : : : : |\n",
+      "| | : | : |\n",
+      "|\u001b[35mY\u001b[0m| : |B:\u001b[43m \u001b[0m|\n",
+      "+---------+\n",
+      "  (South)\n"
+     ]
+    }
+   ],
+   "source": [
+    "action = 0\n",
+    "state, reward, done, info = env.step(action)\n",
+    "env.render()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,15 +230,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Timesteps taken: 1890\n",
-      "Penalties incurred: 616\n"
+      "Timesteps taken: 200\n",
+      "Penalties incurred: 60\n"
      ]
     }
    ],
@@ -171,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -213,30 +291,18 @@
      "output_type": "stream",
      "text": [
       "+---------+\n",
-      "|R: | : :G|\n",
-      "| :\u001b[42m_\u001b[0m| : : |\n",
+      "|R: | : :\u001b[35mG\u001b[0m|\n",
+      "| : | : : |\n",
       "| : : : : |\n",
-      "| | : | : |\n",
-      "|\u001b[35mY\u001b[0m| : |B: |\n",
+      "| |\u001b[42m_\u001b[0m: | : |\n",
+      "|Y| : |B: |\n",
       "+---------+\n",
-      "  (North)\n",
+      "  (Pickup)\n",
       "\n",
-      "Timestep: 140\n",
-      "State: 138\n",
-      "Action: 1\n",
-      "Reward: -1\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m--------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                        Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-9-5c6fcc0dfb7e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint_frames\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mframes\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-8-38a3efb210a8>\u001b[0m in \u001b[0;36mprint_frames\u001b[0;34m(frames)\u001b[0m\n\u001b[1;32m      6\u001b[0m         \u001b[0mclear_output\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwait\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m         \u001b[0mprint_a_frame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m         \u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m.1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mprint_a_frame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0midx\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "Timestep: 200\n",
+      "State: 337\n",
+      "Action: 4\n",
+      "Reward: -10\n"
      ]
     }
    ],
@@ -246,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -312,8 +378,8 @@
       "Episode: 100000\n",
       "Training finished.\n",
       "\n",
-      "CPU times: user 1min 53s, sys: 38.6 s, total: 2min 32s\n",
-      "Wall time: 1min 55s\n"
+      "CPU times: user 1min 14s, sys: 26.2 s, total: 1min 40s\n",
+      "Wall time: 1min 13s\n"
      ]
     }
    ],
@@ -354,17 +420,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ -2.40417504,  -2.27325184,  -2.4044241 ,  -2.36219966,\n",
-       "       -10.51808624, -10.8681522 ])"
+       "array([ -2.40565894,  -2.27325184,  -2.40506321,  -2.35774994,\n",
+       "        -9.92796807, -10.43445066])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +449,7 @@
      "output_type": "stream",
      "text": [
       "Results after 100 num_of_episodes:\n",
-      "\tAverage timesteps per episode: 13.18\n",
+      "\tAverage timesteps per episode: 12.86\n",
       "\tAverage penalties per episode: 0.0\n"
      ]
     }
@@ -427,16 +493,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1318"
+       "1286"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -455,18 +521,30 @@
      "output_type": "stream",
      "text": [
       "+---------+\n",
-      "|\u001b[35mR\u001b[0m: | : :\u001b[42mG\u001b[0m|\n",
+      "|R: | : :\u001b[35mG\u001b[0m|\n",
       "| : | : : |\n",
       "| : : : : |\n",
       "| | : | : |\n",
-      "|Y| : |B: |\n",
+      "|\u001b[34;1m\u001b[43mY\u001b[0m\u001b[0m| : |B: |\n",
       "+---------+\n",
-      "  (Pickup)\n",
+      "  (South)\n",
       "\n",
-      "Timestep: 118\n",
-      "State: 96\n",
-      "Action: 4\n",
+      "Timestep: 349\n",
+      "State: 409\n",
+      "Action: 0\n",
       "Reward: -1\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/home/ajay/code/aisv802_drl_course/taxi_v3/taxi_v3-q-learning.ipynb Cell 23'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell://wsl%2Bubuntu/home/ajay/code/aisv802_drl_course/taxi_v3/taxi_v3-q-learning.ipynb#ch0000022vscode-remote?line=0'>1</a>\u001b[0m print_frames(frames)\n",
+      "\u001b[1;32m/home/ajay/code/aisv802_drl_course/taxi_v3/taxi_v3-q-learning.ipynb Cell 14'\u001b[0m in \u001b[0;36mprint_frames\u001b[0;34m(frames)\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/ajay/code/aisv802_drl_course/taxi_v3/taxi_v3-q-learning.ipynb#ch0000013vscode-remote?line=5'>6</a>\u001b[0m clear_output(wait\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/ajay/code/aisv802_drl_course/taxi_v3/taxi_v3-q-learning.ipynb#ch0000013vscode-remote?line=6'>7</a>\u001b[0m print_a_frame(frame, i)\n\u001b[0;32m----> <a href='vscode-notebook-cell://wsl%2Bubuntu/home/ajay/code/aisv802_drl_course/taxi_v3/taxi_v3-q-learning.ipynb#ch0000013vscode-remote?line=7'>8</a>\u001b[0m sleep(\u001b[39m.5\u001b[39;49m)\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
